# fw_esp_idf_drv_ota

./: CMakeLists.txt  Kconfig.projbuild  cmd_ota.c  cmd_ota.h  drv_ota.c  drv_ota.h
